Update documentation
Updated by: https://github.com/pmd/pmd/actions/runs/16451727423
Triggered by: https://github.com/pmd/pmd/actions/runs/16451399719